# JK_S-Proxy

./: .gitignore  CMakeLists.txt  CreateVS2015Solution-x64.bat  CreateVS2015Solution-x86.bat  CreateVS2017Solution-x64.bat  CreateVS2017Solution-x86.bat  CreateVS2019Solution-x64.bat  CreateVS2019Solution-x86.bat  README.md
sourcecode/: CMakeLists.txt
sourcecode/DetourPatcher/: DetourPatcher.cpp  DetourPatcher.hpp
sourcecode/JKA_Proxy/: Proxy_API.cpp  Proxy_Client.cpp  Proxy_Engine.cpp  Proxy_Files.cpp  Proxy_Header.hpp  Proxy_Imports.cpp  Proxy_Main.cpp  Proxy_Shell.hpp  Proxy_SystemCalls.cpp  Proxy_Wrappers.cpp
sourcecode/JKA_SDK/: bg_public.h  bg_vehicles.h  bg_vehicles.hpp  bg_weapons.hpp  g_local.h  g_local.hpp  g_public.hpp  q_shared.h  q_shared.hpp  q_string.hpp  qcommon.hpp  sys_public.hpp  teams.hpp
sourcecode/JKL_Proxy/: Proxy_Client.c  Proxy_Engine.c  Proxy_Header.h  Proxy_Imports.c  Proxy_Main.c  Proxy_SystemCalls.c  Proxy_Wrappers.c
